# rules_android

./: MODULE.bazel  defs.bzl  prereqs.bzl
examples/basicapp/: BUILD  MODULE.bazel  incremental_mobile_install_test_runner.sh
examples/basicapp/java/com/basicapp/: AndroidManifest.xml  AppDatabase.java  BUILD  BasicActivity.java  BasicActivityJNI.java  User.java  UserDao.java  native.cc  native.h
examples/basicapp/java/com/basicapp/res/layout/: basic_activity.xml
mobile_install/: tools_common.bzl  utils.bzl
rules/: busybox.bzl
rules/android_application/: android_application_rule.bzl  bundle_deploy.sh_template
rules/android_sdk_repository/: helper.bzl
tools/android/: BUILD
