module(
    name = "basicapp",
)

bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "bazel_skylib", version = "1.3.0")

bazel_dep(
    name = "rules_android",
    version = "0.6.3",
)


# Local override to enable this app to be used for rules_android presubmit
# integration testing. If you're basing your app's MODULE file on this
# example, you do *not* need the following override.
local_path_override(
    module_name = "rules_android",
    path = "../../",
)

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

# For rules_android integration testing only.
# For a basic app, you won't need anything below this line. 
bazel_dep(name = "rules_shell", version = "0.4.0", dev_dependency = True)
bazel_dep(name = "rules_bazel_integration_test", version = "0.32.0", dev_dependency = True)
bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version = "8.2.1")
bazel_binaries.download(version = "7.6.1")
use_repo(bazel_binaries, "bazel_binaries")
